--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* Header */
 header {
-  background: linear-gradient(135deg, #2cabf5);
+  background: linear-gradient(135deg, #2cabf5, #2cabf5, #2cabf5);
   color: white;
   padding: 20px;
   text-align: center;
