--- a/style.css
+++ b/style.css
@@ -103,3 +103,14 @@ footer {
   padding: 12px;
   margin-top: 30px;
 }
+.visitor-box{
+  max-width:280px;
+  margin:30px auto;
+  padding:12px;
+  text-align:center;
+  background:#ffffff;
+  border-radius:10px;
+  font-size:18px;
+  font-weight:bold;
+  box-shadow:0 4px 10px rgba(0,0,0,0.1);
+}
