--- a/style.css
+++ b/style.css
@@ -105,12 +105,12 @@ footer {
 }
 .visitor-box{
   max-width:280px;
-  margin:30px auto;
+  margin:25px auto;
   padding:12px;
   text-align:center;
   background:#ffffff;
   border-radius:10px;
-  font-size:18px;
-  font-weight:bold;
+  font-size:16px;
+  font-weight:600;
   box-shadow:0 4px 10px rgba(0,0,0,0.1);
 }
